Resources/CC-vnet-nsg.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {},
    "resources": [
        {
            "comments": "CC-vnet-public0-nsg: Cloud Connect Gateway NSG inbound on 6180 and MGMT RDP(10.0.5.4)",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "CC-vnet-public0-nsg",
            "apiVersion": "2017-10-01",
            "properties": {
                "securityRules": [
                    {
                        "name": "VCC_3389_allow",
                        "properties": {
                            "description": "Cloud Connect MGMT Server allow RDP 3389",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "10.0.5.4",
                            "access": "Deny",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "VCC_6180_deny",
                        "properties": {
                            "description": "Cloud Connect MGMT Server Deny 6180",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "6180",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "10.0.5.4",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "GW_6180_alloy",
                        "properties": {
                            "description": "Cloud Connect Gateway",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "6180",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 140,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "comments": "CC-vnet-backbone0-nsg: Veeam Cloud Connect NSG Backbone ",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "CC-vnet-backbone0-nsg",
            "apiVersion": "2017-10-01",
            "properties": {
                "securityRules": []
            }
        }
    ]
}
